--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ant": "^0.0.0",
     "antd": "^5.21.0",
+    "axios": "^1.7.7",
     "design": "^0.1.0",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
